# rankAggregation

./: .gitignore  README.md  top25_dfs.csv
original/refactored/: AlgRAPF.py  ApproxMultiValuedIPF.py  DetConstSort.py  FairILP.py  RandAlgRAPF.py  pyproject.toml  top25_dfs.json
original/refactored/data/: case_study_rates_v2.csv
original/refactored/data/Mallows/: 50k_attribute.csv  unique_200.csv
original/refactored/data/att2/: normal_data_Lc_n=10000_m=25000.csv  normal_data_Lc_n=1000_m=10.csv  normal_data_Lc_n=10_m=1000.csv  normal_data_Lc_n=10_m=10000.csv  normal_data_Lc_n=25000_m=1000000.csv  normal_data_Lc_n=2500_m=100000.csv  normal_data_Lc_n=250_m=10000.csv  normal_data_Lc_n=250_m=100000.csv  normal_data_Lc_n=400_m=1000000.csv  normal_data_Lc_n=50000_m=100000.csv  normal_data_Lc_n=5000_m=100000.csv  normal_data_Lc_n=500_m=10000.csv  normal_data_Lc_n=500_m=100000.csv  normal_data_Lc_n=600_m=10000.csv  normal_data_Lc_n=600_m=100000.csv  normal_data_Lc_n=7500_m=100000.csv  normal_data_Lc_n=800_m=10000.csv  normal_data_Lv_n=10000_m=1000000.csv  normal_data_Lv_n=1000_m=10000.csv  normal_data_Lv_n=1000_m=50.csv  normal_data_Lv_n=1000_m=5000.csv  normal_data_Lv_n=1000_m=7500.csv  normal_data_Lv_n=10_m=10000.csv  normal_data_Lv_n=200_m=10000.csv  normal_data_Lv_n=200_m=100000.csv  normal_data_Lv_n=200_m=1000000.csv  normal_data_Lv_n=250_m=10000.csv  normal_data_Lv_n=250_m=100000.csv  normal_data_Lv_n=30_m=100000.csv  normal_data_Lv_n=400_m=100000.csv  normal_data_Lv_n=40_m=100000.csv  normal_data_Lv_n=50000_m=100000.csv  normal_data_Lv_n=5000_m=10000.csv  (+11 more)
src/: run.sh  (+5 more)
(+334 files in other folders)
